testsuite/tests/checks/enumeration_ranges_in_case_statements/test.out
enumeration_ranges_in_case_statements.adb:10:15: error: enumeration ranges in case statements
10 |          when Arr'Range  =>  --  FLAG
   |               ^^^^^^^^^ 

enumeration_ranges_in_case_statements.adb:12:15: error: enumeration ranges in case statements
12 |          when D .. E =>      --  FLAG
   |               ^^^^^^ 

